--- a/style/style.css
+++ b/style/style.css
@@ -132,6 +132,7 @@ span {
 }
 .hero-btn {
   border: 1px solid #ff8e25;
+  cursor: pointer;
 }
 .hero-btn:hover {
   background: transparent;
@@ -430,17 +431,179 @@ hr {
 }
 
 /* end of Testimonial section  */
+
+/* start of contact section */
+.contact__section {
+  padding: 5rem;
+
+  background-color: azure;
+}
+.contact__section--main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2rem;
+  margin: 2rem 7rem;
+  margin-bottom: 3rem;
+}
+.contact__section--main > h1 {
+  font-size: 2rem;
+}
+.contact__section--main > h1 > span {
+  font-size: 2.3rem;
+}
+.form__controller {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 2rem;
+  background-color: #e8edf0;
+  width: 100%;
+
+  padding: 10rem;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.contact__section--left {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+.contact__section--left > h2 {
+  font-size: 2rem;
+}
+
+.contact__section--left > form {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+.input-group {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+
+  flex-direction: column;
+  align-items: flex-start;
+  /* width: 100%; */
+}
+.inline_input {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 10rem;
+}
+.input-group > label {
+  font-size: 1.5rem;
+}
+.inline_input > .input-group > input {
+  height: 40px;
+  width: 200%;
+}
+
+.contact__form--map > iframe {
+  height: 37rem;
+  width: 50rem;
+}
+
+.inline_input {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.input-group {
+  flex: 1;
+  margin-right: 20px;
+}
+
+.input-group label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.input-group input[type="text"],
+.input-group input[type="email"],
+#message {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+/* Optional: Add more styling to the input fields */
+.input-group input[type="text"]:focus,
+.input-group input[type="email"]:focus {
+  outline: none;
+  border-color: #ff8e25;
+  box-shadow: 0 0 5px #ff8e25;
+}
+
+/* Optional: Add more styling to the label */
+.input-group label {
+  color: #333;
+}
+.input_subject,
+#message {
+  width: 100%;
+}
+#message {
+  margin-bottom: 2rem;
+}
+#message:focus {
+  outline: none;
+  border-color: #ff8e25;
+  box-shadow: 0 0 5px #ff8e25;
+}
+.contact__icon {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 10rem;
+  margin: 5rem;
+}
+.icon_main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  flex-direction: column;
+}
+.icon_main > i {
+  font-size: 2rem;
+  background-color: #ff8e25;
+  padding: 1rem;
+  border-radius: 5rem;
+  color: white;
+}
+.icon_main > p {
+  font-size: 1.3rem;
+}
 /* footer section */
 .footer__section {
   background-color: azure;
   padding: 10rem;
   padding-top: 2rem;
+  padding-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
 }
 .footer__main {
   /* margin: 10rem; */
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+  margin-right: 3rem;
 }
 .footer__logo > img {
   height: 70px;
@@ -475,4 +638,28 @@ hr {
   text-decoration: none;
   font-size: 1.3rem;
   color: black;
+}
+.follow {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2rem;
+}
+.social_media {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  gap: 2rem;
+}
+.social_media > i {
+  font-size: 20px;
+  color: #ff8e25;
+  cursor: pointer;
+}
+.footer__section > p {
+  font-size: 1.2rem;
+  text-align: center;
+  color: #888888;
 }
