--- a/style.css
+++ b/style.css
@@ -566,6 +566,65 @@ hr {
   color: #888888;
 }
 
+/* Style for product page  */
+.product__section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  flex-direction: column;
+  padding: 2rem;
+}
+.product__main--items {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4rem;
+  flex-wrap: wrap;
+}
+.products__main {
+  /* border: 1px solid #ff9c40; */
+  background-color: #f4f2f1;
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: 20px;
+  box-shadow: 2px 1px 18px #d6d3d3;
+  cursor: pointer;
+  transition: box-shadow 0.3s ease, transform 0.3s ease;
+}
+.products__main:hover {
+  transform: scale(1.05);
+}
+.product__main--text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+.product__main--text > h2 {
+  font-size: 2.3rem;
+}
+.product__main--text > p {
+  font-size: 1.7rem;
+}
+.product__rating > i {
+  color: #ff8e25;
+  font-size: 1.5rem;
+}
+.product__section > h1 {
+  font-size: 3rem;
+}
+.product__section > h1 > span {
+  font-size: 3rem;
+}
+.product__main--img > img {
+  height: 20rem;
+  width: auto;
+}
 /* Responsive css start here */
 @media only screen and (max-width: 1200px) {
   .testimonial__img1 > img {
