changing the location of the image

--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ hr {
 }
 .image_section--left {
   width: 40%;
-  background-image: url("../img/white-bread.webp");
+  background-image: url("./img/white-bread.webp");
   padding: 2rem;
   padding-left: 2rem;
   background-size: cover;
@@ -254,7 +254,7 @@ hr {
 }
 .second-left {
   width: 60%;
-  background-image: url("../img/patty.jpg");
+  background-image: url("./img/patty.jpg");
 }
 .second-right {
   width: 40%;
