--- a/Login/login.css
+++ b/Login/login.css
@@ -7,6 +7,9 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-image: url('https://images.unsplash.com/photo-1518978054039-e4682dbc9a5d?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');    
+    background-repeat: no-repeat;
+    background-size: cover;
   }
   
   .login-container {
