--- a/style.css
+++ b/style.css
@@ -169,16 +169,18 @@ hr {
   align-items: flex-start;
   justify-content: center;
   flex-direction: column;
-  width: 30%;
+  /* width: 30%; */
   flex-wrap: wrap;
 }
 .items__section--down > img {
-  width: 70%;
+  /* width: 70%;
+  height: 350px; */
   height: 350px;
+  width: auto;
   border-radius: 10px 10px 0px 0px;
 }
 .item-btn {
-  width: 70%;
+  width: 100%;
   background-color: #ff8e25;
   font-size: 1.5rem;
   border: none;
@@ -572,65 +574,6 @@ hr {
   color: #888888;
 }
 
-/* Style for product page  */
-.product__section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
-  flex-direction: column;
-  padding: 2rem;
-}
-.product__main--items {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 4rem;
-  flex-wrap: wrap;
-}
-.products__main {
-  /* border: 1px solid #ff9c40; */
-  background-color: #f4f2f1;
-  padding: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  border-radius: 20px;
-  box-shadow: 2px 1px 18px #d6d3d3;
-  cursor: pointer;
-  transition: box-shadow 0.3s ease, transform 0.3s ease;
-}
-.products__main:hover {
-  transform: scale(1.05);
-}
-.product__main--text {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 1rem;
-}
-.product__main--text > h2 {
-  font-size: 2.3rem;
-}
-.product__main--text > p {
-  font-size: 1.7rem;
-}
-.product__rating > i {
-  color: #ff8e25;
-  font-size: 1.5rem;
-}
-.product__section > h1 {
-  font-size: 3rem;
-}
-.product__section > h1 > span {
-  font-size: 3rem;
-}
-.product__main--img > img {
-  height: 20rem;
-  width: auto;
-}
 /* Responsive css start here */
 @media only screen and (max-width: 1200px) {
   .testimonial__img1 > img {
@@ -706,6 +649,12 @@ hr {
     padding: 4rem;
   }
 }
+.menu-icon > i {
+  width: 20px;
+  height: 15px;
+  margin-left: 20px;
+  display: none;
+}
 @media only screen and (max-width: 976px) {
   .hero__section--left > h1 {
     font-size: 3rem;
@@ -727,40 +676,196 @@ hr {
   .contact__section--main {
     padding: 0;
   }
-}
-/* Hamburger Menu styling */
-/* .hamburger-menu {
-  display: none;
-  cursor: pointer;
-}
 
-.bar {
-  width: 25px;
-  height: 3px;
-  background-color: white;
-  margin: 3px auto;
-} */
+  .nav_lists > ul {
+    position: absolute;
+    top: 80px;
+    left: 0;
+    background: #333;
+    width: 100%;
+    overflow: hidden;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: flex-end;
+    transition: max-height 0.5s;
+  }
 
-/* responsive for the navbar */
-/* @media (max-width: 768px) {
-  .nav_lists {
+  .nav_lists > ul > li {
+    display: block;
+    margin-right: 50px;
+    /* margin-top: 5px; */
+    margin-bottom: 10px;
+  }
+
+  .nav_lists > ul > li > a {
+    color: #fff;
+  }
+
+  .menu-icon > i {
+    display: block;
+    cursor: pointer;
+    color: white;
+    font-size: 2rem;
+  }
+  .right__navbar > .search {
     display: none;
   }
-  .hamburger-menu {
-    display: block;
+  .btn > p {
+    display: none;
   }
-  .menu {
+  .cart > .btn {
+    border: none;
+    background-color: #ff9c40;
+    padding: 0;
+    padding-top: 6px;
+  }
+  .navbar > .right__navbar {
+    gap: 0rem;
+  }
+  .form__controller {
     flex-direction: column;
-    position: absolute;
-    top: 100%;
-    left: 0;
+  }
+  .contact__section--main {
+    margin: 1rem 2rem;
+  }
+  .contact__icon {
+    flex-wrap: wrap;
+    gap: 3rem;
+    margin: 3re;
+  }
+  .testimonial__section {
+    margin: 2rem;
+  }
+  .footer__section {
+    padding: 2rem;
+  }
+  /* .category__section {
+    margin: 2rem;
+  }
+  .category__top {
+    flex-wrap: wrap;
+    width: auto;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+  .category__img > img {
+    height: 500px;
     width: 100%;
-    background-color: #fff;
-    z-index: 1000;
+  } */
+}
+/* for menu button  */
+@media only screen and (max-width: 793px) {
+  .hero__section--right {
+    padding: 0;
   }
-  .menu li {
+  .hero__section {
+    padding: 1rem 1rem;
+  }
+  .category__section {
+    gap: 3rem;
+    margin: 1rem;
+  }
+  .category__top {
+    flex-wrap: wrap;
+  }
+  .category__img > img {
+    height: 660px;
+    width: 100%;
+  }
+  .items__section {
+    margin: 1rem;
+  }
+  .image__section {
+    margin: 1rem;
+  }
+  .image_section--right {
+    height: 311px;
+  }
+  .testimonial__section {
+    margin: 1rem;
+    padding: 0rem;
+  }
+  .testimonial__section--main {
+    flex-wrap: wrap;
+  }
+  .contact__section--left > form {
+    align-items: center;
+  }
+  .form__controller {
+    align-items: center;
+  }
+  .contact__section--main {
+    margin: 1rem;
+  }
+  .footer__main {
+    flex-wrap: wrap;
+    gap: 3rem;
+  }
+  .hero__section--right > img {
+    height: auto;
+    width: 100%;
+    border-radius: 1rem;
+  }
+}
+@media only screen and (max-width: 626px) {
+  .contact__form--map > iframe {
+    height: 100%;
+    width: auto;
+  }
+  .items__section--down > img {
+    width: 100%;
+    height: auto;
+  }
+  .hero__section--left > h1 {
+    font-size: 2rem;
+  }
+  .hero__section--left > p {
+    font-size: 1rem;
+  }
+  .hero__section--left > .hero-btn {
+    padding: 1rem 2rem;
+  }
+  .testimonial__section--down {
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .testimonial_section--box {
+    width: 100%;
+  }
+  body > .header {
+    padding: 1rem 1rem;
+  }
+  .image_section--right {
+    height: 420px;
+  }
+}
+@media only screen and (max-width: 426px) {
+  .hero__section {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .hero__section--left {
+    align-items: center;
+  }
+  .hero__section--left > h1 {
     text-align: center;
-    padding: 10px;
-    border-bottom: 1px solid #ccc;
   }
-} */
+  .inline_input {
+    gap: 0;
+  }
+  .contact__section--main > h1 {
+    font-size: 1.5rem;
+  }
+  .contact__section--left > h2 {
+    font-size: 1.2rem;
+  }
+  .input-group > label {
+    font-size: 1rem;
+  }
+  .follow > .btn {
+    padding: 1rem;
+  }
+}
