--- a/global.css
+++ b/global.css
@@ -1,11 +1,14 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap");
 @import url("./colors.css");
 * {
   margin: 0;
   padding: 0;
   font-size: 14px;
   font-family: "Poppins", sans-serif;
+  text-decoration: none !important;
+  list-style: none;
 }
 
 /* Toast box */
