--- a/css/global.css
+++ b/css/global.css
@@ -216,3 +216,22 @@ form {
   background-color: var(--primary-hover);
   transition: 1s ease;
 }
+
+/* Animations */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes slideUp {
+  from {
+    transform: translateY(100%);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
