--- a/css/home.css
+++ b/css/home.css
@@ -7,6 +7,7 @@
   justify-content: center;
   gap: 20px;
   padding: 100px 0px;
+  animation: fadeIn 0.5s ease-in;
 }
 .hero__section--left {
   display: flex;
