made reponsive changes to contact

--- a/css/contact.css
+++ b/css/contact.css
@@ -113,6 +113,11 @@
     padding: 20px;
   }
 
+  .detail-numbers{
+    flex-direction: column;
+    gap: 20px;
+    text-align: left;
+  }
   .contact-form,
   .map {
     flex: 1;
