--- a/css/contact.css
+++ b/css/contact.css
@@ -56,10 +56,11 @@
 }
 
 .form-group input[type="text"],
-.form-group input[type="email"],
-.form-group textarea {
+.form-group input[type="email"],.form-group textarea, .form-group input[type="date"],
+.form-group input[type="url"]{
   width: 100%;
-  padding-bottom: 15px;
+  padding-bottom: 5px;
+  margin-bottom: 10px;
   border: none;
   background: none;
   border-bottom: 0.5px solid rgb(67, 67, 67) !important;
@@ -70,12 +71,28 @@
 
 .form-group textarea {
   resize: vertical;
+ 
+}
+.form-group label 
+
+{
+  color: grey;
+  padding-bottom: 5px;
+  margin-bottom: 10px;
+  border: none;
+  background: none;
+  gap: 10px;
+  font-size: 18px;
+  outline: none;
+}
+form-group input[type="url"] pla{
+  color: grey;
 }
 
 .contact-form button[type="submit"] {
-  width: 100%;
+  width: 20%;
   padding: 15px;
-  background: linear-gradient(var(--primary), var(--primary-hover));
+  background-color: Var(--primary);
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -83,9 +100,27 @@
   transition: background-color 0.3s ease;
   font-size: 18px;
 }
+.contact-form button[type="reset"] {
+  width: 20%;
+  padding: 15px;
+  
+  color: var(--primary);
+  background-color: #fff;
+  border: 1px solid var(--primary);
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-size: 18px;
+}
+
+.contact-form button[type="reset"]:hover{
+  background: #ff9800;
+  color: white;
+}
 
 .contact-form button[type="submit"]:hover {
-  background-color: var(--primary-hover);
+  background-color: 
+  var(--primary-hover) 
 }
 
 .map {
@@ -96,6 +131,8 @@
   overflow: hidden;
   height: 50rem;
 }
+.contact_buttons{display: flex;
+gap: 50px;}
 
 .map iframe {
   width: 100%;
