--- a/css/global.css
+++ b/css/global.css
@@ -11,6 +11,12 @@
   list-style: none;
 }
 
+@media all and (orientation: portrait) {
+  * {
+    font-size: 1.2rem;
+  }
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
