--- a/css/contact.css
+++ b/css/contact.css
@@ -19,12 +19,13 @@
 .detail-numbers {
   display: flex;
   margin: 20px 0px;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .detail-numbers a {
-  text-align: center;
-  width: 33%;
+  text-align: start;
+  color: var(--primary);
   font-weight: 400;
 }
 
